--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitledata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData:interface'
-    summary: <span data-ttu-id="1f7c3-101">描述通过调用返回的数据的接口`chartAxisTitle.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="1f7c3-101">An interface describing the data returned by calling `chartAxisTitle.toJSON()`</span></span><!-- --><span data-ttu-id="1f7c3-102">.</span><span class="sxs-lookup"><span data-stu-id="1f7c3-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartAxisTitle.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartAxisTitleData
     fullName: Excel.Interfaces.ChartAxisTitleData
     langs:
@@ -11,12 +11,13 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartAxisTitleData#format:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleData#text:member'
+      - 'excel!Excel.Interfaces.ChartAxisTitleData#textOrientation:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#format:member'
     summary: |-
-      <span data-ttu-id="1f7c3-103">表示图表坐标轴标题的格式。</span><span class="sxs-lookup"><span data-stu-id="1f7c3-103">Represents the formatting of chart axis title.</span></span> <span data-ttu-id="1f7c3-104">只读。</span><span class="sxs-lookup"><span data-stu-id="1f7c3-104">Read-only.</span></span>
+      表示图表坐标轴标题的格式。 只读。
 
-      <span data-ttu-id="1f7c3-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f7c3-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -29,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#text:member'
     summary: |-
-      <span data-ttu-id="1f7c3-106">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="1f7c3-106">Represents the axis title.</span></span>
+      表示坐标轴标题。
 
-      <span data-ttu-id="1f7c3-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f7c3-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -42,11 +43,27 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#textOrientation:member'
+    summary: |-
+      表示文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: number;'
+      return:
+        type:
+          - number
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleData#visible:member'
     summary: |-
-      <span data-ttu-id="1f7c3-108">指定坐标轴标题是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="1f7c3-108">A boolean that specifies the visibility of an axis title.</span></span>
+      指定坐标轴标题是否可见的布尔值。
 
-      <span data-ttu-id="1f7c3-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1f7c3-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
