--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData:interface'
-    summary: '<span data-ttu-id="60cea-101">一个用于更新 ChartAxisTitle 对象上的数据的接口，可用于`chartAxisTitle.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="60cea-101">An interface for updating data on the ChartAxisTitle object, for use in `chartAxisTitle.set({ ... })`</span></span><!-- --><span data-ttu-id="60cea-102">.</span><span class="sxs-lookup"><span data-stu-id="60cea-102"></span></span>'
+    summary: '一个用于更新 ChartAxisTitle 对象上的数据的接口，可用于`chartAxisTitle.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartAxisTitleUpdateData
     fullName: Excel.Interfaces.ChartAxisTitleUpdateData
     langs:
@@ -11,12 +11,13 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
+      - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="60cea-103">表示图表坐标轴标题的格式。</span><span class="sxs-lookup"><span data-stu-id="60cea-103">Represents the formatting of chart axis title.</span></span>
+      表示图表坐标轴标题的格式。
 
-      <span data-ttu-id="60cea-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60cea-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -29,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
     summary: |-
-      <span data-ttu-id="60cea-105">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="60cea-105">Represents the axis title.</span></span>
+      表示坐标轴标题。
 
-      <span data-ttu-id="60cea-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60cea-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -42,11 +43,27 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
+    summary: |-
+      表示文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: number;'
+      return:
+        type:
+          - number
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="60cea-107">指定坐标轴标题是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="60cea-107">A boolean that specifies the visibility of an axis title.</span></span>
+      指定坐标轴标题是否可见的布尔值。
 
-      <span data-ttu-id="60cea-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="60cea-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
