--- a/docs/docs-ref-autogen/excel/excel/excel.tablechangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.tablechangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.TableChangedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="1a446-101">提供有关引发 Changed 事件的表的信息。</span><span class="sxs-lookup"><span data-stu-id="1a446-101">Provides information about the table that raised the Changed event.</span></span>
+      提供有关引发 Changed 事件的表的信息。
 
-      <span data-ttu-id="1a446-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TableChangedEventArgs
     fullName: Excel.TableChangedEventArgs
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.TableChangedEventArgs#worksheetId:member'
   - uid: 'excel!Excel.TableChangedEventArgs#address:member'
     summary: |-
-      <span data-ttu-id="1a446-103">获取地址，该地址表示特定工作表上的表格的更改区域。</span><span class="sxs-lookup"><span data-stu-id="1a446-103">Gets the address that represents the changed area of a table on a specific worksheet.</span></span>
+      获取地址，该地址表示特定工作表上的表格的更改区域。
 
-      <span data-ttu-id="1a446-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
     fullName: address
     langs:
@@ -38,9 +38,9 @@ items:
           - string
   - uid: 'excel!Excel.TableChangedEventArgs#changeType:member'
     summary: |-
-      <span data-ttu-id="1a446-105">获取更改类型，该类型表示 Changed 事件的触发方式。</span><span class="sxs-lookup"><span data-stu-id="1a446-105">Gets the change type that represents how the Changed event is triggered.</span></span> <span data-ttu-id="1a446-106">有关详细信息，请参阅 DataChangeType。</span><span class="sxs-lookup"><span data-stu-id="1a446-106">See Excel.DataChangeType for details.</span></span>
+      获取更改类型，该类型表示 Changed 事件的触发方式。 有关详细信息，请参阅 DataChangeType。
 
-      <span data-ttu-id="1a446-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: changeType
     fullName: changeType
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.TableChangedEventArgs#changeType~0:complex'
   - uid: 'excel!Excel.TableChangedEventArgs#details:member'
     summary: |-
-      <span data-ttu-id="1a446-108">表示有关更改详细信息的信息。</span><span class="sxs-lookup"><span data-stu-id="1a446-108">Represents the information about the change detail.</span></span> <span data-ttu-id="1a446-109">当对单个单元格触发 Changed 事件时，可以检索此属性。</span><span class="sxs-lookup"><span data-stu-id="1a446-109">This property can be retrieved when the Changed event is triggered on a single cell.</span></span> <span data-ttu-id="1a446-110">如果已更改的事件在多个单元格上触发，则无法检索此属性。</span><span class="sxs-lookup"><span data-stu-id="1a446-110">If the Changed event is triggered on multiple cells, this property cannot be retrieved.</span></span>
+      获取有关更改详细信息的信息。 当对单个单元格触发 Changed 事件时，可以检索此属性。 如果已更改的事件在多个单元格上触发，则无法检索此属性。
 
-      <span data-ttu-id="1a446-111">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-111">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: details
     fullName: details
     langs:
@@ -69,7 +69,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1a446-112">示例</span><span class="sxs-lookup"><span data-stu-id="1a446-112">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           async function onTableChanged(eventArgs: Excel.TableChangedEventArgs) {
@@ -84,9 +84,9 @@ items:
           ```
   - uid: 'excel!Excel.TableChangedEventArgs#getRange:member(1)'
     summary: |-
-      <span data-ttu-id="1a446-113">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="1a446-113">Gets the range that represents the changed area of a table on a specific worksheet.</span></span>
+      获取表示特定工作表上的表的更改区域的范围。
 
-      <span data-ttu-id="1a446-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getRange(ctx)
     fullName: getRange(ctx)
     langs:
@@ -105,9 +105,9 @@ items:
             - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TableChangedEventArgs#getRangeOrNullObject:member(1)'
     summary: |-
-      <span data-ttu-id="1a446-115">获取表示特定工作表上的表的更改区域的范围。</span><span class="sxs-lookup"><span data-stu-id="1a446-115">Gets the range that represents the changed area of a table on a specific worksheet.</span></span> <span data-ttu-id="1a446-116">它可能会返回 null 对象。</span><span class="sxs-lookup"><span data-stu-id="1a446-116">It might return null object.</span></span>
+      获取表示特定工作表上的表的更改区域的范围。 它可能会返回 null 对象。
 
-      <span data-ttu-id="1a446-117">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getRangeOrNullObject(ctx)
     fullName: getRangeOrNullObject(ctx)
     langs:
@@ -126,9 +126,9 @@ items:
             - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.TableChangedEventArgs#source:member'
     summary: |-
-      <span data-ttu-id="1a446-118">获取事件源。</span><span class="sxs-lookup"><span data-stu-id="1a446-118">Gets the source of the event.</span></span> <span data-ttu-id="1a446-119">有关详细信息，请参阅 Excel.EventSource。</span><span class="sxs-lookup"><span data-stu-id="1a446-119">See Excel.EventSource for details.</span></span>
+      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      <span data-ttu-id="1a446-120">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-120">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
@@ -141,9 +141,9 @@ items:
           - 'excel!Excel.TableChangedEventArgs#source~0:complex'
   - uid: 'excel!Excel.TableChangedEventArgs#tableId:member'
     summary: |-
-      <span data-ttu-id="1a446-121">获取其中的数据发生更改的表格的 ID。</span><span class="sxs-lookup"><span data-stu-id="1a446-121">Gets the id of the table in which the data changed.</span></span>
+      获取其中的数据发生更改的表格的 ID。
 
-      <span data-ttu-id="1a446-122">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-122">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tableId
     fullName: tableId
     langs:
@@ -157,7 +157,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1a446-123">示例</span><span class="sxs-lookup"><span data-stu-id="1a446-123">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           async function onChange(event) {
@@ -176,9 +176,9 @@ items:
           ```
   - uid: 'excel!Excel.TableChangedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="1a446-124">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="1a446-124">Gets the type of the event.</span></span> <span data-ttu-id="1a446-125">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="1a446-125">See Excel.EventType for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      <span data-ttu-id="1a446-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -191,9 +191,9 @@ items:
           - '"TableChanged"'
   - uid: 'excel!Excel.TableChangedEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="1a446-127">获取其中的数据发生更改的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="1a446-127">Gets the id of the worksheet in which the data changed.</span></span>
+      获取其中的数据发生更改的工作表的 ID。
 
-      <span data-ttu-id="1a446-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1a446-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
@@ -207,7 +207,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="1a446-129">示例</span><span class="sxs-lookup"><span data-stu-id="1a446-129">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```typescript
           async function onChange(event) {
