--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetfilteredeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetfilteredeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.WorksheetFilteredEventArgs:interface'
     summary: |-
-      <span data-ttu-id="dc537-101">提供有关引发了筛选器应用事件的工作表的信息。</span><span class="sxs-lookup"><span data-stu-id="dc537-101">Provides information about the worksheet that raised the filter applied event.</span></span>
+      提供有关引发了筛选器应用事件的工作表的信息。
 
-      <span data-ttu-id="dc537-102">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc537-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: Excel.WorksheetFilteredEventArgs
     fullName: Excel.WorksheetFilteredEventArgs
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.WorksheetFilteredEventArgs#worksheetId:member'
   - uid: 'excel!Excel.WorksheetFilteredEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="dc537-103">表示事件的类型。</span><span class="sxs-lookup"><span data-stu-id="dc537-103">Represents the type of the event.</span></span> <span data-ttu-id="dc537-104">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="dc537-104">See Excel.EventType for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      <span data-ttu-id="dc537-105">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc537-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: type
     fullName: type
@@ -33,9 +33,9 @@ items:
           - '"WorksheetFiltered"'
   - uid: 'excel!Excel.WorksheetFilteredEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="dc537-106">表示在其中应用筛选器的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="dc537-106">Represents the id of the worksheet in which the filter is applied.</span></span>
+      获取应用了筛选器的工作表的 id。
 
-      <span data-ttu-id="dc537-107">\[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc537-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: worksheetId
     fullName: worksheetId
