--- a/docs/docs-ref-autogen/office/office/office.dialog.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialog.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.Dialog:interface'
-    summary: <span data-ttu-id="ea953-101">调用时`UI.displayDialogAsync`返回的对象。</span><span class="sxs-lookup"><span data-stu-id="ea953-101">The object that is returned when `UI.displayDialogAsync` is called.</span></span> <span data-ttu-id="ea953-102">它公开用于注册事件处理程序和关闭对话框的方法。</span><span class="sxs-lookup"><span data-stu-id="ea953-102">It exposes methods for registering event handlers and closing the dialog.</span></span>
-    remarks: '<span data-ttu-id="ea953-103">**要求集**： [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)</span><span class="sxs-lookup"><span data-stu-id="ea953-103">**Requirement set**: [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)</span></span>'
+    summary: 调用时`UI.displayDialogAsync`返回的对象。 它公开用于注册事件处理程序和关闭对话框的方法。
+    remarks: '**要求集**： [DialogAPI](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/dialog-api-requirement-sets)'
     name: Office.Dialog
     fullName: Office.Dialog
     langs:
@@ -12,14 +12,15 @@ items:
     children:
       - 'office!Office.Dialog#addEventHandler:member(1)'
       - 'office!Office.Dialog#close:member(1)'
+      - 'office!Office.Dialog#messageChild:member(1)'
       - 'office!Office.Dialog#sendMessage:member(1)'
   - uid: 'office!Office.Dialog#addEventHandler:member(1)'
     summary: |-
-      <span data-ttu-id="ea953-p102">注册事件处理程序。支持两种类型的事件：</span><span class="sxs-lookup"><span data-stu-id="ea953-p102">Registers an event handler. The two supported events are:</span></span>
+      注册事件处理程序。支持两种类型的事件：
 
-      - <span data-ttu-id="ea953-p103">DialogMessageReceived。在对话框向其父级发送消息时触发。</span><span class="sxs-lookup"><span data-stu-id="ea953-p103">DialogMessageReceived. Triggered when the dialog box sends a message to its parent.</span></span>
+      - DialogMessageReceived。在对话框向其父级发送消息时触发。
 
-      - <span data-ttu-id="ea953-p104">DialogEventReceived。在对话框已关闭或以其他方式卸载时触发。</span><span class="sxs-lookup"><span data-stu-id="ea953-p104">DialogEventReceived. Triggered when the dialog box has been closed or otherwise unloaded.</span></span>
+      - DialogEventReceived。在对话框已关闭或以其他方式卸载时触发。
     name: 'addEventHandler(eventType, handler)'
     fullName: 'addEventHandler(eventType, handler)'
     langs:
@@ -41,7 +42,7 @@ items:
           type:
             - '!Function:interface'
   - uid: 'office!Office.Dialog#close:member(1)'
-    summary: <span data-ttu-id="ea953-110">从父页调用以关闭相应的对话框。</span><span class="sxs-lookup"><span data-stu-id="ea953-110">Called from a parent page to close the corresponding dialog box.</span></span>
+    summary: 从父页调用以关闭相应的对话框。
     name: close()
     fullName: close()
     langs:
@@ -53,8 +54,28 @@ items:
         type:
           - void
         description: ''
+  - uid: 'office!Office.Dialog#messageChild:member(1)'
+    summary: 将来自主机页（如任务窗格或无 UI 的函数文件）的消息传递到从页面打开的对话框。
+    remarks: '**要求集**： TBD'
+    isPreview: true
+    name: messageChild(message)
+    fullName: messageChild(message)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'messageChild(message: string): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: message
+          description: 接受来自主机页面的一条消息以传递到对话框。 可以将任何可序列化为字符串的内容（包括 JSON 和 XML）都发送。
+          type:
+            - string
   - uid: 'office!Office.Dialog#sendMessage:member(1)'
-    summary: <span data-ttu-id="ea953-111">仅供内部使用。</span><span class="sxs-lookup"><span data-stu-id="ea953-111">FOR INTERNAL USE ONLY.</span></span> <span data-ttu-id="ea953-112">请勿在代码中调用。</span><span class="sxs-lookup"><span data-stu-id="ea953-112">DO NOT CALL IN YOUR CODE.</span></span>
+    summary: 仅供内部使用。 请勿在代码中调用。
     name: sendMessage(name)
     fullName: sendMessage(name)
     langs:
